
public enum CommandType {
	normal, no_undo
}
