
public class EditText {
	String text;
	
	public EditText(String text){
		this.text = text;
	}
	
	public String getText(){
		return text;
	}
	
	public void setText(String text){
		this.text = text;
	}
}
